scripts/tests/errors/err_class_no_name.bu
// BAD: class with no name
class {
    var x;
}
print("should not reach here");
